# Django-news-app

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/api/: urls.py
backend/api-usage/: articles_api.py  utils.py
backend/api/articles/: serializers.py  urls.py  views.py
backend/api/content/: serializers.py
backend/api/users/: serializers.py  urls.py  views.py
backend/api_usage/: articles_api.py  utils.py
backend/apps/articles/: admin.py  apps.py  forms.py  mixins.py  models.py  tasks.py  urls.py  utils.py  views.py
backend/apps/articles/migrations/: 0001_initial.py  0002_remove_article_articles_ar_topic_i_6def1c_idx_and_more.py  0003_remove_content_article_remove_content_content_type_and_more.py  0004_rename_status_article_is_active.py  0005_article_articles_ar_slug_452037_idx.py  0006_alter_topic_name_and_more.py  0007_alter_topic_options_alter_comment_author_and_more.py
backend/apps/articles/templatetags/: redis_tags.py
backend/apps/content/: admin.py  apps.py  exceptions.py  models.py  urls.py  utils.py  views.py
backend/apps/content/migrations/: 0001_initial.py  0002_alter_image_image.py  0003_alter_image_image.py
backend/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
backend/core/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/core/settings/: base.py  local.py  main.py  prod.py
frontend/templates/: base.html
frontend/templates/articles/: create.html  detail.html  edit.html  list.html  most_viewed_articles.html  search.html
frontend/templates/comments/: edit.html
frontend/templates/content/: create.html  edit.html  image.html
frontend/templates/users/: login.html  registration.html
(+1 files in other folders)
